Fix some code smells
- Replace deprecated method calls
- Make some fields transient